# pingora_web

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README_zh.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml  sync-readme.yml
crates/pingora_web/: Cargo.toml  README.md
crates/pingora_web/src/: lib.rs
crates/pingora_web/src/core/: data.rs  mod.rs  request.rs  response.rs  router.rs
crates/pingora_web/src/error/: mod.rs  response_error.rs  web_error.rs
crates/pingora_web/src/logging/: logger.rs  logging_middleware.rs  mod.rs  tracing_logger.rs
crates/pingora_web/src/middleware/: limits_middleware.rs  middleware.rs  mod.rs  panic_recovery_middleware.rs  request_id_middleware.rs  tracing_middleware.rs
crates/pingora_web/src/middleware/compression_middleware/: mod.rs  tests.rs
crates/pingora_web/src/utils/: mod.rs  request_id.rs  serve_dir.rs
examples/pingora_example/: Cargo.toml
examples/pingora_example/src/: main.rs
