[package]
name = "pingora_web"
version = "0.1.7"
edition = "2024"
description = "Minimal routing, middleware, and logging (with request ID) for Pingora-based servers."
license = "MIT OR Apache-2.0"
repository = "https://github.com/pingora-web/pingora_web"
homepage = "https://github.com/pingora-web/pingora_web"
documentation = "https://docs.rs/pingora_web"
readme = "README.md"
keywords = ["pingora", "http", "middleware", "routing", "server"]
categories = ["web-programming::http-server"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
matchit = "0.8"
tokio = { version = "1", features = ["time", "fs", "io-util"] }
http = "1"
bytes = "1"
tracing = "0.1"
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

[dependencies.pingora]
version = "0.6"

[dependencies.pingora-core]
version = "0.6"

[dependencies.pingora-http]
version = "0.6"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
