[package]
name = "pingora_example"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
pingora_web = { path = "../../crates/pingora_web" }
pingora = { version = "0.6", features = ["lb"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
